# ThermoRG-NN

./: .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  README_zenodo.md  STEPWISE_THERMORG_ALGORITHM.md  UNIVERSAL_THERMORG_ALGORITHM.md  compute_cifar10_manifold.py  generate_figures.py  kaggle_train_script.py  phase_a_results.json  phase_a_summary.csv  pyproject.toml  quick_test.py  requirements.txt  run_local_tests.py  setup.py  test_local_light.py  thermo-nn.ipynb
examples/: example_optimality_verification.py  example_tas_modality_modules.py  vjp_jacobian_usage.py
experiments/: EXPERIMENTAL_PLAN.md  EXPERIMENTS.md  EXPERIMENTS_SUMMARY.md  PHASE_A_REDESIGN.md  __init__.py
kaggle_results/: PHASE_A_COMPLETE_report.md
legacy/: applied_theory_paper_final.tex  unified_framework_paper_final.tex
papers/: APPLIED_PAPER_v1.md  PAPER_OUTLINE.md  THEORY_PAPER_v1.md  applied_paper.tex  applied_theory_paper_final.tex  derivations.tex  generate_figures.ipynb  generate_figures.py  paper_draft_v1.tex  paper_draft_v2.tex  references.bib  theory_paper.tex  unified_framework_paper_final.tex
tests/: __init__.py  test_analytical_predictor.py  test_architectures.py  test_experiments.py  test_feature_extractor.py  test_integration.py  test_jacobian_vjp.py  test_manifold.py  test_profiler.py  test_scaling.py  test_simulations.py  test_smc.py  test_tas_metrics.py  test_tas_modality.py  test_tas_optimality.py  test_topology_calculator.py  test_tsa.py
theory/: THEORY.md  THEORY_FRAMEWORK.md
thermorg/: __init__.py  analytical_predictor.py  cooling.py  j_topo.py  utils.py  (+3 more)
(+197 files in other folders)
